--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Deneme Amaçlı Giriş Sayfası</title>
     <link rel="stylesheet" href="giriş.css">
     
 </head>
@@ -18,4 +18,5 @@
         </fieldset>
     </form>
 </body>
+
 </html>
