--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <fieldset>
             <input  type="text" placeholder="Kullanıcı Adı" class="deneme"><br><br>
             <input type="password" placeholder="Şifre"><br><br> 
-            <a href="anasayfa.html" class="Giriş"> Hesabına Giriş Yap </a>
+            <a href="Yakındageliyor.html" class="Giriş"> Hesabına Giriş Yap </a>
             <a href="Şifremiunuttun.html"> </a> <br><br>
             <label class="label1"> Not:</label> <label class="label2">bu site deneme amaçlıdır.</label>
         </fieldset>
@@ -20,3 +20,4 @@
 </body>
 
 </html>
+
