Add navigation link to index page
Added a link to navigate back to the index page.

--- a/Yakındageliyor.html
+++ b/Yakındageliyor.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1> bu site deneme amaçlı olduğu öyle bir sistem yoktur </h1>
+    <a href="index.html"> Geri Dön </a>
 </body>
+
 </html>
