Modify warning message in index.html
Updated the note to inform users not to enter any data.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
             <input type="password" placeholder="Şifre"><br><br> 
             <a href="Yakındageliyor.html" class="Giriş"> Hesabına Giriş Yap </a>
             <a href="Şifremiunuttun.html"> </a> <br><br>
-            <label class="label1"> Not:</label> <label class="label2">bu site deneme amaçlıdır.</label>
+            <label class="label1"> Not:</label> <label class="label2">bu site deneme amaçlıdır. Herhangi bir veri girmeyin!!</label>
         </fieldset>
     </form>
 </body>
 
 </html>
+
 
